--- a/website/status.html
+++ b/website/status.html
@@ -10,6 +10,10 @@
 		</center>
 		
 		<h1>Status:</h1>
+		<p><b>6/29/2009</b> - Basic NVT support implemented! As a test case for interaction, the AWT Terminal component is nearly feature complete.
+		In the very near future, a Swing component with mirrored (but somewhat superior) capability / performance will be introduced. The AWT terminal
+		is more of a proof-of-concept than a long-term supported component. Since we already require Java 1.5, it's really not worth continuing to develop, and as such, will likely be eliminated very soon in favor of a proper Swing component. Nevertheless, this is a significant milestone.</p>
+		
 		<p>We are currently in the process of implementing a basic NVT device 
 		in accordance with <a href="http://www.faqs.org/rfcs/rfc854.html">
 		RFC 854</a>. The controller (TelnetClient) is moving 
