--- a/website/status.html
+++ b/website/status.html
@@ -10,22 +10,27 @@
 		</center>
 		
 		<h1>Status:</h1>
-		<p><b>6/29/2009</b> - Basic NVT support implemented! As a test case for interaction, the AWT Terminal component is nearly feature complete.
-		In the very near future, a Swing component with mirrored (but somewhat superior) capability / performance will be introduced. The AWT terminal
-		is more of a proof-of-concept than a long-term supported component. Since we already require Java 1.5, it's really not worth continuing to develop, and as such, will likely be eliminated very soon in favor of a proper Swing component. Nevertheless, this is a significant milestone.</p>
 		
-		<p>We are currently in the process of implementing a basic NVT device 
-		in accordance with <a href="http://www.faqs.org/rfcs/rfc854.html">
-		RFC 854</a>. The controller (TelnetClient) is moving 
-		along nicely. The model (Terminal) is just getting underway. As for 
-		Views, there's a few options on the shelf, but there's nothing yet.</p>
-		<p>The following Telnet Options have been implemented:
+		<p>The generic Telnet NVT implementation is funtional. It consists of 
+		a functioning TelnetClient which supports pluggable abstractions for 
+		telnet Options. Along with this, for the NVT device there is a 80x24
+		character buffer implemented in DefaultTerminalModel, which can be 
+		rendered to a JTerminal with a DefaultTerminalRenderer. Basic I/O 
+		in the form of alphanumeric (ASCII) keys, CRLF, and Backspace has been
+		implemented as a pluggable KeyMap.</p>
+		
+		<p>At this time, development is beginning to focus on DEC-VT100 and 
+		IBM-3279-4-E terminal support.</p>
+		
+		<p>The following RFC's have been implemented (at least partially) in a client-side capacity.
 			<ul>
-				<li>End Of Record - <a href="http://www.faqs.org/rfcs/rfc885.html">RFC 885</a></li>
+				<li>Telnet NVT - <a href="http://www.faqs.org/rfcs/rfc854.html">RFC 854</a></li>
+				<li>Echo - <a href="http://www.faqs.org/rfcs/rfc857.html">RFC 857</a></li>
 				<li>Suppress GA - <a href="http://www.faqs.org/rfcs/rfc858.html">RFC 858</a></li>
+				<li>TerminalType - <a href="http://www.faqs.org/rfcs/rfc884.html">RFC 884</a></li>
+				<li>End Of Record - <a href="http://www.faqs.org/rfcs/rfc885.html">RFC 885</a></li>
 			</ul>
 		</p>
-		
 		
 		<hr>
 		<a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=265288&amp;type=5" width="210" height="62" border="0" alt="SourceForge.net Logo" /></a>
