--- a/website/status.html
+++ b/website/status.html
@@ -19,12 +19,17 @@
 		in the form of alphanumeric (ASCII) keys, CRLF, and Backspace has been
 		implemented as a pluggable KeyMap.</p>
 		
-		<p>At this time, development is beginning to focus on DEC-VT100 and 
-		IBM-3279-4-E terminal support.</p>
+		<div><img src="swing_nvt.png"></div>
 		
-		<p>The following RFC's have been implemented (at least partially) in a client-side capacity.
+		<p>At this time, development is beginning to focus on IBM-3278-4-E 
+		terminal support. Once the negotiation stage of RFC 1647 is complete,
+		the 3270 stream parser will be receiving lots of attention.</p>
+		
+		<h2>The following RFC's have been implemented in a client-side capacity.</h2>
+		<p>
 			<ul>
 				<li>Telnet NVT - <a href="http://www.faqs.org/rfcs/rfc854.html">RFC 854</a></li>
+				<li>Telnet Binary Mode - <a href="http://www.faqs.org/rfcs/rfc856.html">RFC 856</a></li>
 				<li>Echo - <a href="http://www.faqs.org/rfcs/rfc857.html">RFC 857</a></li>
 				<li>Suppress GA - <a href="http://www.faqs.org/rfcs/rfc858.html">RFC 858</a></li>
 				<li>TerminalType - <a href="http://www.faqs.org/rfcs/rfc884.html">RFC 884</a></li>
@@ -32,6 +37,12 @@
 			</ul>
 		</p>
 		
+		<h2>The following RFC's are actively being implemented.</h2>
+		<p>
+			<ul>
+				<li>TN3270 Regime - <a href="http://www.faqs.org/rfcs/rfc1041.html">RFC 1041</a></li>
+				<li>TN3270e - <a href="http://www.faqs.org/rfcs/rfc1647.html">RFC 1647</a></li>
+			</ul>
 		<hr>
 		<a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=265288&amp;type=5" width="210" height="62" border="0" alt="SourceForge.net Logo" /></a>
 	</body>
