Update to the website, decode12bitAddress comments.

--- a/website/index.html
+++ b/website/index.html
@@ -11,15 +11,14 @@
 		
 		<h1>JinTn3270 is:</h1>
 		<p>A library and framework for creating Telnet clients in Java. It
-		implements Telnet (<a href="http://www.faqs.org/rfcs/rfc854.html">RFC 854</a>) and a set of extensivle Telnet Options.
+		implements Telnet (<a href="http://www.faqs.org/rfcs/rfc854.html">RFC 854</a>) and a set of Telnet Options.
 		Currently this project is in a rapid state of development, and as
 		such, is constantly changing. You can keep an eye on the latest
 		developments by subscribing to the <a
 		href="https://sourceforge.net/export/rss2_keepsake.php?group_id=265288">recent activity RSS feed</a>.</p>
 		
 		<h1>JinTn3270 is NOT:</h1>
-		<p>Stable, Ready for Use, A 3270 Emulator, or the best thing since
-		sliced bread.</p>
+		<p>Stable, Ready for Use, or the best thing since sliced bread.</p>
 		
 		<h1>History</h1>
 		<p>After using <a
